# cpn-learning-path

./: .env  .gitignore  001_requests.ipynb  README.md  pyproject.toml
.github/workflows/: claude.yml
1-build-with-claude/: 002_system_prompt.ipynb
2-build-with-claude/: 001_requests.ipynb  003_temperature copy.ipynb
2-build-with-claude/1-access-claude-with-api/: 005_controlling_output.ipynb
2-build-with-claude/2-prompt-evaluation/: 001_prompt_evals.ipynb  dataset.json
2-build-with-claude/3-prompt-engineering/: 001_prompting.ipynb  002_prompt_engineering_techniques.ipynb  dataset.json  output.html  output.json
2-build-with-claude/3-prompt-engineering/exercise/: 003_exercise.ipynb  dataset.json  output.html  output.json
2-build-with-claude/4-tools-with-claude/: 001_tools.ipynb  003_tool_streaming_completed.ipynb  006_web_search_complete.ipynb
2-build-with-claude/4-tools-with-claude/005_text_editor_tool/: 005_text_editor_tool.ipynb  main.py  test.py
2-build-with-claude/5-rag-and-agentiic-search/: 001_chunking.ipynb  002_embeddings.ipynb  003_vectordb.ipynb  004_bm25.ipynb  005_hybrid.ipynb
2-build-with-claude/6-claude-features/: 001_thinking_complete.ipynb  002_images.ipynb  002_images_and_pdf.ipynb  003_caching.ipynb  005_code_execution.ipynb
2-build-with-claude/7-mcp/: .env  mcp_client.py  mcp_server.py
2-build-with-claude/8-claude-code/: CLAUDE.md
3-claude-code-in-action/1-hands-on-uigen/: .env  .gitignore  CLAUDE.md
3-claude-code-in-action/2-hooks-queries/: .env
3-claude-code-in-action/uigen/: .gitignore
(+14 files in other folders)
