[project]
name = "anthropic-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.96.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "voyageai>=0.3.7",
]
